assets/css/main.css
/* Global Styles */

html,
body {
    width: 100%;
    height: 100%;
}

body {
    /*font-family: 'Roboto Slab', serif;*/
     font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
   font-weight: 300;
}

.text-vertical-center {
    display: table-cell;
    text-align: center;
    vertical-align: middle;
}

.text-vertical-center h1 {
    margin: 0 0 24px 0;
    padding: 0;
    font-size: 4.5em;
    font-weight: 700;
}

@media(max-width:900px) {

    .text-vertical-center h1 {
        font-size: 2.5em;
    }
}

/* Custom Button Styles */
.btn-light {
    border-radius: 0;
    color: #333;
    background-color: rgb(255,255,255);
}

.btn-light:hover,
.btn-light:focus,
.btn-light:active {
    color: #333;
    background-color: rgba(255,255,255,0.8);
}

/* Custom Horizontal Rule */
hr.small {
    max-width: 100px;
}

/* Header */
.header {
    background-color: #000;
    display: table;
    position: relative;
    width: 100%;
    height: 100%;
    -webkit-transform: translateZ(0);
    overflow: hidden;
}

.header-grad,
.header-pcb,
.header-bg,
.header-logo {
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
}

.header-grad {
    background: linear-gradient(to left, #000 30%, #fff 50%, #000 70%);
    transform: translateX(-100%);
    -webkit-animation: move 10s infinite 1s;
}

@-webkit-keyframes move {
    0% {
        transform: translateX(-100%);
    }

    75% {
        transform: translateX(100%);
    }

    100% {
        transform: translateX(100%);
    }
}

.header-pcb {
    background-image: url(../img/pcbeautiful.png);
}

.header-bg {
    background: url(../img/webbg_responsive.jpg) repeat 0 0 scroll;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    background-size: cover;
    -o-background-size: cover;
    opacity: .9;
}

.header-logo {
    background: url(../img/logo_responsive.png) no-repeat center center;
     -webkit-background-size: auto;
    -moz-background-size: auto;
    background-size: auto;
    -o-background-size: auto;

    /*-webkit-animation: pulse 1s linear infinite;/**/
}

@-webkit-keyframes pulse {
    0% {
        background-size: 51% auto;
    }

    50% {
        background-size: 50% auto;
    }

    90% {
        background-size: 50.5% auto;
    }

    100% {
        background-size: 51% auto;
    }
}

@media(max-width:900px) {
    .header-logo {
        -webkit-background-size: contain;
        -moz-background-size: contain;
        background-size: contain;
        -o-background-size: contain;
    }
}

.header-logo h1,
.header-logo h2,
.header-logo h3 {
    text-indent: -9999px;
}

/* About */
.about {
    background-color: #efefef;
    padding: 60px 0;
}

@media all and (max-width:700px) {

    .about {
        padding: 20px 0;
    }
}

/* Callout */
.callout {
    display: table;
    width: 100%;
    height: 400px;
    color: #fff;
    position: relative;
    overflow: hidden;
    background: url(../img/tissue-fractal-Proscia.jpg) no-repeat center center scroll;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    background-size: cover;
    -o-background-size: cover;
}

.faq-div {

    margin: 5px 5px 5px 5px;
    background-color: #fff;
    opacity: .8;
}

.faq {
    background: url(../img/microarray.png) no-repeat center center scroll;
}

.signup-form {
    width: 50%;
    margin: 10px auto 10px auto;
}

@media(max-width:900px) {
    .signup-form {
        width: 90%;
    }
}

.form-thanks {
    display: none;
    margin-top: 10px;
    font-size: 18px;
    color: #FFF200;
}


/* Sponsors */
.sponsors {
    text-align: center;
}

.hosted-by, .in-collab {
    width: 50%;
    float: left;
    margin-top: 20px;
    padding: 0 20px 20px 20px;
    box-sizing: border-box;
}

.in-collab {
    border-left: 1px solid #eee;
}

.sponsor {
    display: inline-block;
    margin: 10px;
}

.sponsor, .sponsor:visited {
    opacity: 0.6;
}

.sponsor:hover {
    opacity: 0.8;
}

.sponsor:active {
    opacity: 0.9;
}

.sponsor-if {
    margin-top: 24px;
}

.sponsors:after {
    content: '';
    display: table;
    clear: both;
}

@media all and (max-width: 860px) {
    .in-collab {
        border: none;
    }

    .hosted-by, .in-collab {
        float: none;
        margin: 10px auto;
        width: 100%;
    }
}

@media all and (max-width: 700px) {

    .hosted-by, .in-collab {
        margin: 0;
        text-align: center;
    }

    .sponsor {
        max-width: 100%;
        box-sizing: border-box;
    }
}

/* Footer */
footer {
    background: linear-gradient(rgba(255, 255, 255, 1) 10%, rgba(17, 89, 115, 0.12)), url('../img/general-surgery.jpg');
    padding-top: 500px;
    width: 100%;
    background-repeat: no-repeat;
    background-size: cover;
    padding-bottom: 200px;
}

